name:                tahoe-lafs-storage-server
version:             0.1.0.0
synopsis:            A Tahoe-LAFS Storage Server

description:         This package implements a storage server for Tahoe-LAFS.
                     It implements the recently proposed "Great Black Swamp"
                     protocol and not the original Foolscap-based protocol.

homepage:            https://github.com/LeastAuthority/tahoe-lafs-storage-server#readme
license:             BSD3
license-file:        LICENSE
author:              Least Authority TFA GmbH
maintainer:          jean-paul@leastauthority.com
copyright:           BSD3
category:            Cryptography
                   , Distributed Computing
                   , Filesystem
                   , Network
                   , Network APIs
                   , Security
                   , Service
                   , Storage
                   , Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.rst

library
  hs-source-dirs:      src
  exposed-modules:     TahoeLAFS.Storage.API
                     , TahoeLAFS.Storage.Backend
                     , TahoeLAFS.Storage.Backend.Null
                     , TahoeLAFS.Storage.Backend.Memory
                     , TahoeLAFS.Storage.Backend.Filesystem
                     , TahoeLAFS.Storage.Server
                     , TahoeLAFS.Storage.Client
  other-modules:       TahoeLAFS.Internal.ServantUtil
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , bytestring
                     , scientific
                     , base64-bytestring
                     , text
                     , utf8-string
                     , filepath
                     , directory
                     , aeson
                     , cborg
                     , cborg-json
                     , http-media
                     , serialise
                     , http-api-data
                     , http-types
                     , servant-server
                     , servant-client
                     , wai
                     , warp
                     , warp-tls
                     , statvfs

executable tahoe-lafs-storage-server
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , optparse-applicative
                     , tahoe-lafs-storage-server
                     , warp

executable gbs-generate-python-client
  hs-source-dirs:      generate-python-client
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , tahoe-lafs-storage-server
                     , servant-py >= 0.1 && < 2
                     , filepath

test-suite http-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  other-modules:       Lib
                     , Spec
                     , HTTPSpec
                     , SemanticSpec
                     , MiscSpec
  default-language:    Haskell2010
  build-depends:       base
                     , bytestring
                     , base32string
                     , text
                     , containers
                     , vector
                     , directory
                     , temporary
                     , hspec
                     , hspec-expectations
                     , hspec-wai
                     , QuickCheck
                     , quickcheck-instances
                     , hspec-jenkins-lae
                     , wai-extra
                     , http-types
                     , aeson
                     , tahoe-lafs-storage-server
